--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -26,6 +26,7 @@ blocks:
             - cache restore
             - pip download --cache-dir .pip_cache -r requirements.txt
             - cache store
+          parallelism: 50
   - name: Run Code Analysis
     task:
       prologue:
